--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 WTForms~=3.2.1
 Flask~=3.1.0
 Flask-Bcrypt~=1.0.1
+Flask-SQLAlchemy
 
-#pip install -r requirements.txt
+#pip install -r requirements.txt  pip install Flask-SQLAlchemy
