--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,4 @@ Flask~=3.1.0
 Flask-Bcrypt~=1.0.1
 Flask-SQLAlchemy
 
-#pip install -r requirements.txt  pip install Flask-SQLAlchemy
+#pip install -r requirements.txt  
